--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "实时获取股票行情并显示在状态栏",
 	"publisher": "lwch",
 	"icon": "imgs/icon.png",
-	"version": "0.3.2",
+	"version": "0.3.3",
 	"engines": {
 		"vscode": "^1.53.0"
 	},
@@ -73,7 +73,6 @@
 		"@types/vscode": "^1.53.0",
 		"eslint": "^8.7.0",
 		"glob": "^7.2.0",
-		"iconv-lite": "^0.6.3",
 		"mocha": "^9.1.4",
 		"typescript": "^4.5.5",
 		"vscode-test": "^1.6.1"
@@ -81,5 +80,8 @@
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/lwch/vscode-stock.git"
+	},
+	"dependencies": {
+		"iconv-lite": "^0.6.3"
 	}
 }
